# quori_rpe

./: CMakeLists.txt  README.md  package.xml
data/: Study 1 - Form 2.csv
features/: 10.csv  11.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  8.csv  9.csv
launch/: openface2_ros.launch
processed_data/Participant_10_0/: fau.txt  log.txt
processed_data/Participant_10_1/: fau.txt  log.txt
processed_data/Participant_10_10/: fau.txt  log.txt
processed_data/Participant_10_11/: fau.txt  log.txt
processed_data/Participant_10_2/: fau.txt  log.txt
processed_data/Participant_10_3/: fau.txt  log.txt
processed_data/Participant_10_4/: fau.txt  log.txt
processed_data/Participant_10_5/: fau.txt  log.txt
processed_data/Participant_10_6/: fau.txt  log.txt
processed_data/Participant_10_7/: fau.txt  log.txt
processed_data/Participant_10_8/: fau.txt  log.txt
processed_data/Participant_10_9/: fau.txt  log.txt
processed_data/Participant_11_0/: fau.txt  log.txt
processed_data/Participant_11_1/: fau.txt  log.txt
processed_data/Participant_11_10/: fau.txt  log.txt
processed_data/Participant_11_11/: fau.txt  log.txt
processed_data/Participant_11_2/: fau.txt  log.txt
processed_data/Participant_11_3/: fau.txt  log.txt
processed_data/Participant_11_4/: fau.txt  log.txt
processed_data/Participant_11_5/: fau.txt  log.txt
processed_data/Participant_11_6/: fau.txt  log.txt
processed_data/Participant_11_7/: fau.txt  log.txt
processed_data/Participant_11_8/: fau.txt  log.txt
processed_data/Participant_11_9/: fau.txt  log.txt
processed_data/Participant_12_0/: fau.txt  log.txt
processed_data/Participant_12_1/: fau.txt  log.txt
processed_data/Participant_12_10/: fau.txt  log.txt
processed_data/Participant_12_11/: log.txt
processed_data/Participant_12_2/: fau.txt  log.txt
rpe/: Participant_10.txt  Participant_11.txt  Participant_12.txt  Participant_13.txt  Participant_14.txt  Participant_15.txt  Participant_16.txt  Participant_17.txt  Participant_18.txt  Participant_19.txt  Participant_20.txt  Participant_21.txt  Participant_22.txt  Participant_23.txt  Participant_24.txt  Participant_8.txt  Participant_9.txt
script/: combine_features.py  parse_log.py  plot_fau.py  plot_rpe.py  predict.py  run_auto_reg_mov_avg.py  run_linear_regression.py  run_prophet.py  run_random_forest.py  run_svr.py
src/: quori_openface2_ros.cpp  quori_openface2_rosbag.cpp
(+349 files in other folders)
